fixing contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -80,7 +80,7 @@ h1 {
 }
 
 p {
-    font-size: 18px;
+    font-size: 0.5;
     font-family: "Roboto", sans-serif;
     text-align: center;
 }
